--- a/hyracks/hyracks-storage-am-lsm-btree/pom.xml
+++ b/hyracks/hyracks-storage-am-lsm-btree/pom.xml
@@ -38,27 +38,34 @@
 
 
 
-  <dependencies>    
+  <dependencies>
     <dependency>
   		<groupId>org.apache.hyracks</groupId>
   		<artifactId>hyracks-storage-am-btree</artifactId>
   		<version>0.2.17-SNAPSHOT</version>
   		<type>jar</type>
   		<scope>compile</scope>
-  	</dependency> 
+  	</dependency>
   	<dependency>
   		<groupId>org.apache.hyracks</groupId>
   		<artifactId>hyracks-storage-am-bloomfilter</artifactId>
   		<version>0.2.17-SNAPSHOT</version>
   		<type>jar</type>
   		<scope>compile</scope>
-  	</dependency> 
+  	</dependency>
   	<dependency>
   		<groupId>org.apache.hyracks</groupId>
   		<artifactId>hyracks-storage-am-lsm-common</artifactId>
   		<version>0.2.17-SNAPSHOT</version>
   		<type>jar</type>
   		<scope>compile</scope>
-  	</dependency>  	
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.hyracks</groupId>
+  		<artifactId>hyracks-storage-am-statistics</artifactId>
+  		<version>0.2.17-SNAPSHOT</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
